@@ -1,13 +1,0 @@
-<f:layout name="PageWizard"/>
-
-<f:section name="iconButtons">
-</f:section>
-
-<f:section name="content">
-	<div class="typo3-message message-warning">
-		<div class="header-container"><h4>Something went wrong</h4></div>
-		<div class="message-body">
-			<p>We were unable to redirect you to the newly created page.</p>
-		</div>
-	</div>
-</f:section>
