@@ -1,136 +1,0 @@
-{namespace pageWizard=Tx_Pagewizard_ViewHelpers}
-<f:layout name="PageWizard"/>
-
-<f:section name="iconButtons">
-</f:section>
-
-<f:section name="content">
-	<h2><f:translate key="pageWizard" /></h2>
-	<f:if condition="{0: storagePid} == {0: 999999999}">
-		<f:then>
-			<div class="typo3-message message-warning">
-				<div class="header-container"><h4><f:translate key="noTemplatesFoundMsgTitle" /></h4></div>
-				<div class="message-body">
-					<p><f:translate key="storagePidNotSet" /></p>
-					<pre>
-
-module.tx_pagewizard {
-	persistence {
-		storagePid = 123
-	}
-}
-					</pre>
-				</div>
-			</div>
-		</f:then>
-		<f:else>
-			<f:if condition="{0: command} == {0: 'crPage'}">
-				<f:then>
-					<f:if condition="{pageTemplates}">
-						<f:then>
-							<fieldset class="t3-form-palette-fieldset">
-								<table class="typo3-TCEforms">
-									<tr>
-										<td>
-											<div class="typo3-dyntabmenu-divs">
-												<f:form enctype="multipart/form-data" action="create" controller="PageWizard" method="post">
-													<f:form.hidden name="positionPid" value="{positionPid}" />
-													<table width="100%" class="wrapperTable">
-														<tr class="class-main2">
-															<td class="palette-header">
-																<h3><f:translate key="selectPreset" /></h3>
-																<f:for each="{pageTemplates}" as="template" iteration="iterator">
-																	<f:form.radio
-																			  class="treeRadio"
-																			  name="templateId"
-																			  id="tx_pagewizard_pageWizard_templateId{template.page.uid}"
-																			  value="{template.page.uid}"
-																			  tabindex="4"
-																			  checked="{iterator.isFirst}"
-																			  />
-																	<label class="t3-form-palette-field-label class-main3" for="tx_pagewizard_pageWizard_templateId{template.page.uid}">
-																		<strong>{template.page.title}</strong>
-																	</label>
-																	<pageWizard:format.raw>{template.tree}</pageWizard:format.raw>
-																</f:for>
-															</td>
-														</tr>
-														<tr class="class-main2">
-															<td class="palette-header">
-																<h3><f:translate key="copyMode" /></h3>
-																<ul>
-																	<li class="copyMode">
-																		<label class="t3-form-palette-field-label class-main3" for="tx_pagewizard_pageWizard_copyPagesAndContent">
-																			<f:form.radio
-																					  class="treeRadio"
-																					  name="copyMode"
-																					  id="tx_pagewizard_pageWizard_copyPagesAndContent"
-																					  value="pagesAndContent"
-																					  tabindex="2"
-																					  checked="checked"
-																					  />
-																			<f:translate key="copyPagesAndContent" />
-																		</label>
-																	</li>
-																	<li class="copyMode">
-																		<label class="t3-form-palette-field-label class-main3" for="tx_pagewizard_pageWizard_copyPagesOnly">
-																			<f:form.radio
-																					  class="treeRadio"
-																					  name="copyMode"
-																					  id="tx_pagewizard_pageWizard_copyPagesOnly"
-																					  value="pagesOnly"
-																					  tabindex="2"
-																					  />
-																			<f:translate key="copyPagesOnly" />
-																		</label>
-																	</li>
-																</ul>
-															</td>
-														</tr>
-														<tr class="class-main2">
-															<td class="palette-header">
-																<f:form.submit value="{f:translate(key:'createPageTree')}" tabindex="8" />
-															</td>
-														</tr>
-													</table>
-												</f:form>
-											</div>
-										</td>
-									</tr>
-								</table>
-							</fieldset>
-						</f:then>
-						<f:else>
-							<div class="typo3-message message-warning">
-								<div class="header-container"><h4><f:translate key="noTemplatesFoundMsgTitle" /></h4></div>
-								<div class="message-body">
-									<p><a href="/typo3/mod.php?M=web_list&id={settings.storagePid}"><f:translate key="noTemplatesFoundMsgBody" arguments="{0: settings.storagePid}" /></a></p>
-								</div>
-							</div>
-						</f:else>
-					</f:if>
-				</f:then>
-				<f:else>
-					<div class="t3-form-palette-fieldset">
-						<table class="typo3-TCEforms">
-							<tr>
-								<td>
-									<div class="typo3-dyntabmenu-divs">
-										<table width="100%" class="wrapperTable">
-											<tr class="class-main2">
-												<td class="palette-header">
-													<h3><f:translate key="selectPosition" /></h3>
-													<pageWizard:format.raw>{positionMap}</pageWizard:format.raw>
-												</td>
-											</tr>
-										</table>
-									</div>
-								</td>
-							</tr>
-						</table>
-					</div>
-				</f:else>
-			</f:if>
-		</f:else>
-	</f:if>
-</f:section>
